Thu Jun 24 13:58:15 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DataWriter.h:
        * connectors/dds4ccm/impl/DataWriter.cpp:
        * connectors/dds4ccm/impl/DataWriter_T.h:
        * connectors/dds4ccm/impl/DataWriter_T.cpp:
        * connectors/dds4ccm/impl/dds4ccm_impl.mpc:
          Added new DataWriter class that just stores the pointer to the
          underlying DDS entity 

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender.mpc:
        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.cpp:
          Use the new base which is not templated which is much easier for
          the user

        * connectors/dds4ccm/impl/dds:
          Removed this directory

Thu Jun 24 13:00:10 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/PortUsage/Base/PortUsage_Test_Base.mpc:
          This test needs anytypecode

Thu Jun 24 12:43:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/InstanceHandle/Sender/Writer_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SetConnectorAttributes/Component/SetConnectorAttribute_Component_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
          Changed code to get to the underlying dds entities

Thu Jun 24 12:34:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/DDSWriterEntity/Sender/Writer_Sender_exec.cpp:
          Changed code to get to the underlying dds entities

        * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CSLSampleRejected/Sender/CSL_SRTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.cpp: