@@ -139,12 +139,8 @@ namespace CIAO_SetConnectorAttribute_SetConnectorAttributeComponent_Impl
     DDS::DataWriter_var dds_dw =
       this->context_->get_connection_info_write_dds_entity ();
 
-    typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-      CIAO_SetConnectorAttribute_SetConnectorAttributeTestConnector_DDS_Event_Impl::DDS_DDS_Event_Traits,
-      CIAO_SetConnectorAttribute_SetConnectorAttributeTestConnector_DDS_Event_Impl::SetConnectorAttributeTest_DDS_Traits>
-        DataWriter_type;
-
-    DataWriter_type * ccm_dds_dw = reinterpret_cast < DataWriter_type * > (dds_dw.in ());
+    typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+    DataWriter_type * ccm_dds_dw = dynamic_cast <DataWriter_type*> (dds_dw.in ());
     if (!ccm_dds_dw)
       {
         ACE_DEBUG ((LM_DEBUG, "ERROR: Component_exec_i::ccm_activate - "
