@@ -56,11 +56,8 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
                         "Datawriter 1 connection is NIL.\n"));
             throw CORBA::INTERNAL ();
           }
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-            CIAO_SharedDP_Connector1_SharedDPTest1Connector_DDS_Event_Impl::SharedDPTest1_DDS_Traits,
-            CIAO_SharedDP_Connector1_SharedDPTest1Connector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
-
-        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw1.in ());
+        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw1.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw1 = typed_ccm_dw->get_impl ();
@@ -90,11 +87,9 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
                         "Datawriter 2 connection is NIL.\n"));
             throw CORBA::INTERNAL ();
           }
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-            CIAO_SharedDP_Connector2_SharedDPTest2Connector_DDS_Event_Impl::SharedDPTest2_DDS_Traits,
-            CIAO_SharedDP_Connector2_SharedDPTest2Connector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw2.in ());
+        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw2.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw2 = typed_ccm_dw->get_impl ();
@@ -124,11 +119,9 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
                         "Datawriter 3 connection is NIL.\n"));
             throw CORBA::INTERNAL ();
           }
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-            CIAO_SharedDP_Connector3_SharedDPTest3Connector_DDS_Event_Impl::SharedDPTest3_DDS_Traits,
-            CIAO_SharedDP_Connector3_SharedDPTest3Connector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw3.in ());
+        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw3.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw3 = typed_ccm_dw->get_impl ();
