@@ -76,11 +76,9 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
                         "Datawriter 1 connection is NIL.\n"));
             throw CORBA::INTERNAL ();
           }
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-            CIAO_SharedDP_SharedDPTestConnector_DDS_Event_Impl::SharedDPTest_DDS_Traits,
-            CIAO_SharedDP_SharedDPTestConnector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw1.in ());
+        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw1.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw1 = typed_ccm_dw->get_impl ();
@@ -114,11 +112,9 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
                         "Datawriter 2 connection is NIL.\n"));
             throw CORBA::INTERNAL ();
           }
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-            CIAO_SharedDP_SharedDPTestConnector_DDS_Event_Impl::SharedDPTest_DDS_Traits,
-            CIAO_SharedDP_SharedDPTestConnector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw2.in ());
+        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw2.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw2 = typed_ccm_dw->get_impl ();
@@ -152,11 +148,9 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
                         "Datawriter 3 connection is NIL.\n"));
             throw CORBA::INTERNAL ();
           }
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-            CIAO_SharedDP_SharedDPTestConnector_DDS_Event_Impl::SharedDPTest_DDS_Traits,
-            CIAO_SharedDP_SharedDPTestConnector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw3.in ());
+        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw3.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw3 = typed_ccm_dw->get_impl ();
@@ -189,11 +183,8 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
                         "Datawriter 4 connection is NIL.\n"));
             throw CORBA::INTERNAL ();
           }
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_T<
-            CIAO_SharedDP_SharedDPTestConnector_DDS_Event_Impl::SharedDPTest_DDS_Traits,
-            CIAO_SharedDP_SharedDPTestConnector_DDS_Event_Impl::DDS_DDS_Event_Traits> DataWriter_type;
 
-        DataWriter_type * typed_ccm_dw = reinterpret_cast <DataWriter_type *> (dw4.in ());
+        DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw4.in ());
         if (typed_ccm_dw)
           {
             DDSDataWriter * dds_dw4 = typed_ccm_dw->get_impl ();
